blueprint priority system